--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -19,17 +19,17 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
         with:
-          python-version: 3.12.5
+          python-version: 3.12.10
       - run: pip install -r requirements.txt pyinstaller
       - name: Pyinstaller windows
         if: runner.os == 'Windows'
-        run: pyinstaller ${{ env.ENTRY_POINT }} --onefile --name ${{github.event.repository.name}}-win
+        run: pyinstaller ${{ env.ENTRY_POINT }} --onefile --icon=sound_icon.ico --name ${{github.event.repository.name}}-win
       - name: Pyinstaller MacOS
         if: runner.os == 'macOS'
-        run: pyinstaller ${{ env.ENTRY_POINT }} --onefile --name ${{github.event.repository.name}}-mac
+        run: pyinstaller ${{ env.ENTRY_POINT }} --onefile --icon=sound_icon.ico --name ${{github.event.repository.name}}-mac
       - name: Pyinstaller Linux
         if: runner.os == 'Linux'
-        run: pyinstaller ${{ env.ENTRY_POINT }} --onefile --name ${{github.event.repository.name}}-linux
+        run: pyinstaller ${{ env.ENTRY_POINT }} --onefile --icon=sound_icon.ico --name ${{github.event.repository.name}}-linux
 
       - name: MacOS zip folder
         if: runner.os == 'macOS'
